cloudsim: add auth secret to Node entity
